# krita

./: CMakeLists.txt
krita/: CMakeLists.txt  krita.action
krita/sketch/: MainWindow.cpp  main.cpp
libs/: CMakeLists.txt
libs/image/brushengine/: kis_paintop_config_widget.h
libs/libqml/: CMakeLists.txt  KisSketchView.cpp  qml.qrc
libs/libqml/plugins/kritasketchplugin/: CMakeLists.txt
libs/ui/: KisView.cpp  KisView.h  kis_canvas_controls_manager.cpp  kis_canvas_controls_manager.h  kis_mimedata.cpp
libs/ui/forms/: wdggeneralsettings.ui
libs/ui/widgets/: kis_cmb_composite.cc  kis_cmb_composite.h
plugins/dockers/: CMakeLists.txt
plugins/dockers/channeldocker/: channeldocker_dock.cpp
plugins/dockers/touchdocker/: CMakeLists.txt  TouchDockerDock.cpp  TouchDockerDock.h  WdgTouchDocker.ui
plugins/extensions/pykrita/plugin/plugins/tenbrushes/: tenbrushes.action  tenbrushes.py
